src/objects/MT_CampaignImportData__c.object
<CustomObject>
    <description>Import table for campaign data from KRS.</description>
    <fields>
        <fullName>MT_CampaignId__c</fullName>
        <description>KRS ID of campaign</description>
        <label>Campaign ID</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_CampaignName__c</fullName>
        <description>Name of KRS campaign</description>
        <label>Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OpportunitySalesforceId__c</fullName>
        <description>Salesforce ID of the opportunity related to the KRS campaign.</description>
        <label>Opportunity Salesforce ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Media Transparency Campaign Import Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>MT_OpportunitySalesforceId__c</columns>
        <columns>MT_CampaignId__c</columns>
        <columns>MT_CampaignName__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>C-{000000}</displayFormat>
        <label>Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Media Transparency Campaign Import Data</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>